[package]
name = "osrm-binding"
version = "0.1.6"
edition = "2024"
authors = ["Mathias Vandaele <contactvandaele@gmail.com>"]
publish = true

description = "Low-level, unsafe FFI bindings to the OSRM C++ library."
license = "MIT"
repository = "https://github.com/mathias-vandaele/osrm-binding"
homepage = "https://github.com/mathias-vandaele/osrm-binding"
keywords = ["osrm", "routing", "ffi"]
categories = ["api-bindings", "external-ffi-bindings"]


[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
derive_builder = "0.20.2"
dotenvy = "0.15.7"

[build-dependencies]
cmake = "0.1.54"
cc = "1.2.29"
reqwest = { version="0.12.22", features = ["blocking"] }
flate2 = "1.1.2"
tar = "0.4.44"

[dev-dependencies]
criterion = "0.6.0"
rand = "0.9.2"

[[bench]]
name = "bench-osrm"
harness = false

[profile.release]
lto = false

