[package]
name = "osrm-binding"
version = "0.1.0"
edition = "2024"
authors = ["Mathias Vandaele <contactvandaele@gmail.com>"]

description = "Low-level, unsafe FFI bindings to the OSRM C++ library."
license = "MIT"
repository = "https://github.com/mathias-vandaele/osrm-binding"
homepage = "https://github.com/mathias-vandaele/osrm-binding"
keywords = ["osrm", "routing", "ffi"]
categories = ["api-bindings", "external-ffi-bindings"]


[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
osrm-sys = { path = "../osrm-sys", version = "0.1.0", publish = false }
thiserror = "2.0.12"
derive_builder = "0.20.2"
dotenvy = "0.15.7"

